# koebridge

./: .gitignore  .gitmodules  CMakeLists.txt  PROGRESS.md  README.md
cmake/: FindPortAudio.cmake  FindSentencePiece.cmake  FindWhisper.cmake
config/: config.ini  default_settings.json
docs/: Doxyfile  design-doc.md  rag-integration.md
include/interfaces/: i_model_manager.h  i_translation_model.h  i_translation_service.h
include/stt/: realtime_transcriber.h
scripts/: build.sh  docs-gen.sh  download_model.sh  local_setup.sh  rm_trailing_space.sh  run.sh  test.sh
src/: main.cc
src/audio/: audio_capture.cc  audio_capture.h  audio_processor.cc  audio_processor.h
src/inference/: engine.cc  engine.h  transformer.h
src/llm/: llm_manager.cc  llm_manager.h  llm_model.cc  llm_model.h  nllb_model.cc  nllb_model.h
src/models/: ggml_model.cc  ggml_model.h
src/stt/: realtime_transcriber.cc  whisper_wrapper.cc  whisper_wrapper.h
src/translation/: data_structures.h  model_manager.cc  model_manager.h  translation_service.cc  translation_service.h  translator.cc  translator.h  worker.cc  worker.h
src/translation/interfaces/: data_structures.h  i_translation_service.h
src/ui/: main_window.cc  main_window.h  settings_dialog.cc  settings_dialog.h  translation_view.cc  translation_view.h
src/utils/: config.cc  config.h  logger.cc  logger.h
tests/: CMakeLists.txt
tests/integration/end_to_end/: translation_test.cc
tests/unit/: README.md  TEST_README.md
tests/unit/audio/: README.md  audio_capture_test.cc
tests/unit/llm/: llm_manager_test.cc  llm_model_test.cc  nllb_model_test.cc
tests/unit/models/: ggml_model_test.cc
tests/unit/stt/: realtime_transcriber_test.cc  whisper_wrapper_test.cc
tests/unit/translation/: README.md  model_manager_test.cc  translation_service_test.cc
